fix alignment formatting, and header formatting

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,6 +48,16 @@
   }
 }
 
+.trix-content .ql-align-center {
+  text-indent: 0;
+  text-align: center;
+}
+
+.trix-content .ql-align-right {
+  text-indent: 0;
+  text-align: right;
+}
+
 .markdown {
   p { margin-bottom: 1rem; }
 }
