--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -25,10 +25,14 @@
     }
 
     h1 {
-      @apply text-2xl;
+      @apply text-3xl;
     }
 
     h2 {
+      @apply text-2xl;
+    }
+
+    h3 {
       @apply text-xl;
     }
 
@@ -42,10 +46,14 @@
       }
 
       h1 {
-        @apply text-2xl;
+        @apply text-3xl;
       }
 
       h2 {
+        @apply text-2xl;
+      }
+
+      h3 {
         @apply text-xl;
       }
     }
@@ -76,5 +84,3 @@
     }
   }
 }
-
-@import 'actiontext.css';
